--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
+  syncfusion_flutter_signaturepad: ^26.2.9
 
 dev_dependencies:
   flutter_test:
