--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   flutter_launcher_icons: ^0.13.1
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
+
+  image_picker: ^1.1.2
+  intl: ^0.19.0
+  path_provider: ^2.1.4
+  pdf: ^3.11.1
   syncfusion_flutter_signaturepad: ^26.2.9
 
 dev_dependencies:
