--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   intl: ^0.19.0
   path_provider: ^2.1.4
   pdf: ^3.11.1
+  shared_preferences: ^2.3.1
   syncfusion_flutter_signaturepad: ^26.2.9
 
 dev_dependencies:
