--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_launcher_icons: ^0.13.1
+  flutter_pdfview: ^1.3.2
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
 
